# DynartReversi

./: CLAUDE.md  CROSS_PLATFORM_GUIDE.md  README.md  settings.gradle
_raw/: logo.xcf  youtube-icon.xcf
app/: build.gradle
app/src/androidTest/java/net/dynart/reversi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ReversiCore.cpp  ReversiCore.h  reversicore_jni.cpp
app/src/main/java/net/dynart/reversi/: Board.java  BoardNative.java  Button.java  Coord.java  Game.java  Logo.java  Main.java  Menu.java  MenuColor.java  MenuDifficulty.java  Scene.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/net/dynart/reversi/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
